# bullsEye_complete

./: README.md
Smart_Contract/bullseye/: Anchor.toml  notes
Smart_Contract/bullseye/programs/bullseye/: Cargo.toml
Smart_Contract/bullseye/programs/bullseye/src/: errors.rs  instructions.rs  lib.rs  state.rs
Smart_Contract/bullseye/tests/: bullseye.ts
bullsEye/: .gitignore  notes  package-lock.json  package.json  tailwind.config.ts
bullsEye/app/: WalletProviders.tsx  globals.css  layout.tsx  page.tsx
bullsEye/app/api/actions/vote/[goalOwner]/: route.ts  route.ts.bak
bullsEye/app/dashboard/: page.tsx
bullsEye/components/: CreateGoalModal.tsx  DemoControls.tsx  GoalCard.tsx  ProfileCard.tsx  SocialFeed.tsx  VerificationModal.tsx
bullsEye/components/ui/: accordion.tsx
bullsEye/lib/: blink.ts  mockApi.ts  wallet.tsx
bullsEye/lib/solana/: bullseye-client.ts  config.ts  types.ts  utils.ts
bullsEye/lib/solana/idl/: bullseye.json
bullsEye/public/: actions.json
bullsEye/types/: goal.ts
