[package]
name = "bullseye"
version = "0.1.0"
description = "BullsEye Accountability Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bullseye"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"